syntax="proto3";
package paymentpb;
option go_package="github.com/vietquan-37/payment-service/pkg/pb";
message PaymentLinkResponse{
  string link=1;
}
message PaymentLinkRequest{
  int32 order_id=1;
  float amount=2;
  repeated Items items=3;

}
message Items{
  int32 id=1;
  int32 product_id=2;
  string product_name=3;
  int64 quantity=4;
  float price=5;
}
service PaymentService {
  rpc CreatePaymentLink(PaymentLinkRequest)returns(PaymentLinkResponse){}
}
